# dp_rust

./: README.md
dp_lib/: Cargo.toml
dp_lib/src/: lib.rs  lib_att1.rs
dp_main/: Cargo.toml
dp_main/src/: ]  dp_trait.rs  main.rs  struct_attempt.rs  tests.rs
